--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-less": "^3.3.0",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-plumber": "^1.1.0",
+    "imagemin-pngquant": "^5.0.0",
     "run-sequence": "^1.2.2"
   }
 }
