--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-less": "^3.3.0",
     "gulp-nunjucks-render": "^2.0.0",
